--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+#Intellij Ignore
+*.iml
+.idea/
+target/
+classes/
+*.out
+.DS_Store
